--- a/style.css
+++ b/style.css
@@ -990,19 +990,20 @@ body.logged-in .show-when-logged-out {
     .navigation {
         position: fixed;
         top: 70px;
-        left: -100%; /* Mulai dari luar layar */
-        width: 100%;
+        right: -50%; /* Mulai dari luar layar */
+        width: 50%;
         height: calc(100vh - 70px);
         background: rgba(0, 0, 0, 0.8);
         flex-direction: column;
         align-items: center;
         padding: 40px 0;
-        transition: left 0.3s ease; /* Tambahkan transisi */
+        transition: right 0.3s ease; /* Tambahkan transisi */
         overflow-y: auto;
+        border-radius: 10px;
     }
 
     .navigation.active {
-        left: 0; /* Geser ke dalam layar */
+        right: 0; /* Transisi untuk layar bergeser ke mana */
     }
 
     .navigation a, 
@@ -1061,7 +1062,7 @@ body.logged-in .show-when-logged-out {
 
     .menu-toggle {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 19px;
+        right: 15px;
     }
 }
